--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "vue-slider-component": "^4.1.0-beta.7",
         "vue3-carousel": "^0.3.1",
         "vuex": "^4.0.2"
+    },
+    "dependencies": {
+        "vue-i18n": "^9.4.1"
     }
 }
