"feat: Added unit tests to the Services directory:     - Added CategoryServiceTest class with methods testPaginate, testFindById, testStore, testUpdateReturnNull, testUpdateReturnStringWithValueTitle, testDestroy;     - Added ColorServiceTest class with methods testPaginate, testFindById, testStore, testUpdateReturnNull, testUpdateReturnStringWithValueTitle, testUpdateReturnStringWithValueCode, testUpdateReturnStringWithValueTitleAndCode, testDestroy;     - Added OrderServiceTest class with methods testIndexReturnAnonymousResourceCollection, testStore;     - Added ProductServiceTest class with methods testPaginate, testFindById, testStore, testUpdate, testDestroy, testGetAllCategoriesReturnCollection, testGetAllColorsReturnCollection, testGetAllTagsReturnCollection;     - Added ShopServiceTest class with methods testPaginate, testGetCategories, testGetColors, testGetTags, testGetPrices, testGetProduct, testGetRecentProducts;     - Added TagServiceTest class with methods testPaginate, testFindById, testStore, testUpdateReturnNull, testUpdateReturnStringWithValueTitle, testDestroy;     - Added UserServiceTest class with methods testPaginate, testFindById, testStore, testUpdateReturnNull, testUpdateReturnStringWithValueEmail, testDestroy, testGetGenders, testGetLikedProducts, testLikeProduct, testCommentProduct;"

--- a/_docker/app/Dockerfile
+++ b/_docker/app/Dockerfile
@@ -26,4 +26,7 @@ RUN curl -sL https://deb.nodesource.com/setup_16.x | bash -
 RUN apt-get install -y nodejs
 RUN apt-get install -y nano
 
+# Install Xdebug
+RUN pecl install xdebug && docker-php-ext-enable xdebug
+
 WORKDIR /var/www
